# formation-gen-ai-fxs

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
02 - Prompt Engineering for Developers/: l2-guidelines.ipynb  l3-iterative-prompt-development.ipynb  l4-summarizing.ipynb  l5-inferring.ipynb  l6-transforming.ipynb  l7-expanding.ipynb  l8-chatbot.ipynb
04 - Building Systems with the ChatGPT API/: L1_Language Models, the Chat Format and Tokens.ipynb  L2_Evaluate Inputs - Classification.ipynb  L3_Evaluate Inputs - Moderation.ipynb  L4_Process Inputs - Chain of Thought Reasoning.ipynb  L5_Process Inputs - Chaining Prompts.ipynb  L6_Check outputs.ipynb  L7_Build an End-to-End System.ipynb  L8_Evaluation part I.ipynb  L9_Evaluation Part II.ipynb  utils.py
06 - Introduction Langchain/: L1-Model_prompt_parser.ipynb  L2-Memory.ipynb  L3-Chains.ipynb
07 - LangChain pour le RAG/: 01_document_loading.ipynb  02_document_splitting.ipynb  03_vectorstores_and_embeddings.ipynb  04_retrieval.ipynb  05_question_answering.ipynb
08 - Advanced RAG/: 01_advanced_RAG.ipynb
10 - Functions, Tools and Agents with Langchain/: 1 - LCEL and Function.ipynb  2 - Advanced RAG.ipynb  3 - Agent.ipynb
11 - Agents SDK/: L0 - Introduction.ipynb  L1 - Tools.ipynb  L2 - Handoffs.ipynb  L3 - Guardrails.ipynb
17 - Fine-tuning/: fine-tuning.ipynb  train.jsonl
Exercices/: TechBot.py
Slides/: package-lock.json  package.json  slides.md  slides_agents.md  slides_python.md  slides_recap.md
Slides/pages/: agents-introduction.md  agents-sdk.md  build-llm-applications.md  llm-architecture-light.md  llm-architecture.md  planning_day_3.md  prompt-engineering-for-dev.md  (+4 more)
(+1 files in other folders)
